--- a/employee_management/employee/templates/admin/dashboard.html
+++ b/employee_management/employee/templates/admin/dashboard.html
@@ -21,7 +21,7 @@
 
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" href="{%url 'admin_dasboard'%}">
+                            <a class="nav-link active" href="{%url 'admin_dashboard'%}">
                                 <i class="fas fa-tachometer-alt"></i>
                                 Dashboard
                             </a>
