--- a/employee_management/employee/templates/admin/dashboard.html
+++ b/employee_management/employee/templates/admin/dashboard.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <title>Admin Dashboard - TaskFlow</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome@6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
     <div class="container-fluid">
@@ -45,7 +46,7 @@
                             </a>
                         </li>
                         <li class="nav-item mt-4">
-                            <a class="nav-link text-danger" href="../public/index.html">
+                            <a class="nav-link text-danger" href="{% url 'logout' %}">
                                 <i class="fas fa-sign-out-alt"></i>
                                 Logout
                             </a>
