--- a/employee_management/employee/templates/admin/tasks.html
+++ b/employee_management/employee/templates/admin/tasks.html
@@ -45,7 +45,7 @@
                             </a>
                         </li>
                         <li class="nav-item mt-4">
-                            <a class="nav-link text-danger" href="../public/index.html">
+                            <a class="nav-link text-danger" href="{% url 'logout' %}">
                                 <i class="fas fa-sign-out-alt"></i>
                                 Logout
                             </a>
