--- a/employee_management/employee/templates/public/login.html
+++ b/employee_management/employee/templates/public/login.html
@@ -57,13 +57,19 @@
                     </div>
 
                     <!-- Password -->
-                    <div>
+                    <div class="relative">
                         <label for="password" class="sr-only">Password</label>
                         <input id="password" name="password" type="password" required
                                class="appearance-none rounded-none relative block w-full px-3 py-2 border
                                border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none
                                focus:ring-blue-500 focus:border-blue-500 focus:z-10 sm:text-sm"
                                placeholder="Password">
+
+                        <!-- Eye Toggle Button -->
+                        <span class="absolute inset-y-0 right-3 flex items-center cursor-pointer"
+                              onclick="togglePassword('password', 'loginEye')">
+                            <i id="loginEye" class="fas fa-eye"></i>
+                        </span>
                     </div>
                 </div>
 
@@ -111,7 +117,23 @@
         </div>
     </div>
 
-    <script src="js/auth.js"></script>
-    <script src="js/utils.js"></script>
+<!--    <script src="js/auth.js"></script>-->
+<!--    <script src="js/utils.js"></script>-->
 </body>
+<script>
+function togglePassword(inputId, iconId) {
+    const input = document.getElementById(inputId);
+    const icon = document.getElementById(iconId);
+
+    if (input.type === "password") {
+        input.type = "text";
+        icon.classList.remove("fa-eye");
+        icon.classList.add("fa-eye-slash");
+    } else {
+        input.type = "password";
+        icon.classList.remove("fa-eye-slash");
+        icon.classList.add("fa-eye");
+    }
+}
+</script>
 </html>
